<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azulClaro"
            android:padding="24dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:backgroundTint="@android:color/white"
                android:layout_gravity="center"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/flecha"
                    android:scaleType="centerInside"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1RegUsuario"
                android:textSize="29sp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2RegUsuario"
                android:textSize="40sp"

                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtNombre"
                        android:textSize="22sp"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxStrokeColor="@color/azulBorder"
                        app:boxStrokeWidth="2dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:background="@drawable/edittext_azul"

                            android:id="@+id/edtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:padding="10dp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtApellido"
                        android:textSize="22sp"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/azulClaro2"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxStrokeColor="@color/azulBorder"
                        app:boxStrokeWidth="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtApellido"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:padding="10dp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>




            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCorreo"
                android:textSize="22sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/azulClaro2"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/azulBorder"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtIdent"
                android:textSize="22sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/azulClaro2"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/azulBorder"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtIdentificacion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDirreccion"
                android:textSize="22sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/azulClaro2"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/azulBorder"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTelefono"
                android:textSize="22sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/azulClaro2"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/azulBorder"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTelefono"
                android:textSize="22sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/azulClaro2"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxStrokeColor="@color/azulBorder"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enviar"
                android:id="@+id/btnEnviar"/>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>